7/11: data review