@@ -56,7 +56,7 @@ public class AlbumService {
         String totalTime =  convertTotalTime(albumSongs);
 
         // Map List albumSong to Song list
-        List<Song> songs = albumSongs.stream().map(AlbumSong::getSong).collect(Collectors.toList());
+        List<Song> songs = albumSongs.stream().map(AlbumSong::getSong).filter(Song::isStatus).toList();
 
         // Map Song to Song DTO
         List<SongResponse> songResponses = songs.stream().map(song -> SongResponseMapper.INSTANCE.songToSongResponse(song,null,null,null)).toList();
